updated recipe.html to add useless stuff

--- a/mainApp/templates/mainApp/recipe.html
+++ b/mainApp/templates/mainApp/recipe.html
@@ -7,7 +7,7 @@
 <body>
 <h1>{{ recipe.name }}</h1>
 <p>Description: {{ recipe.description }}</p>
-<p>Preparation time: {{ recipe.preparation_time }}</p>
+<p>Preparation time: {{ recipe.preparation_time }} mins</p>
 <p>Ingredients: {{ recipe.ingredients }}</p>
 <p>Instructions: {{ recipe.instructions }}</p>
 </body>
