--- a/mainApp/static/css/index.css
+++ b/mainApp/static/css/index.css
@@ -47,7 +47,7 @@ form{
 label{
     width: 100%;
     text-align: left;
-
+    font-size: 1.2em;
 }
 input{
     width: 100%;
@@ -110,4 +110,36 @@ button{
     align-items: center;
     font-size: 6vh;
     position: fixed;
+}
+#continue-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5%;
+    width: 100%;
+    margin: 5% 10% 0 10%;
+}
+#continue-options{
+    display: flex;
+    overflow-x: auto;
+    margin:  5% 0 0 0;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    padding: 1%;
+    border: 1px solid black;
+}
+.continue-option{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding : 10px;
+    border-radius: 10px;
+    background-color: #102E50;
+    color: #e0e0e0;
+    margin-right: 10px;
+}
+.continue-option a{
+    color: #e0e0e0;
+    text-decoration: none;
 }
