--- a/mainApp/templates/mainApp/add_recipe.html
+++ b/mainApp/templates/mainApp/add_recipe.html
@@ -10,7 +10,7 @@
 <div style="height: 90vh; width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;">
     {% include "./blocks/header.html" %}
     <h2>Add a Recipe</h2>
-    <form method="post" action="{% url 'add-recipe-action' %}">
+    <form method="post" action="{% url 'add-recipe-action' %}" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <label for="name">Recipe Name:</label>
@@ -27,6 +27,8 @@
         <br>
         <label for="instructions">Instructions:</label>
         <textarea id="instructions" name="instructions" required></textarea>
+        <label for="image">Image (optional):</label>
+        <input type="file" name="image" id="image" accept="image/*">
         <button type="submit">Add Recipe</button>
     </form>
     {% if error %}
