--- a/mainApp/templates/mainApp/logIn.html
+++ b/mainApp/templates/mainApp/logIn.html
@@ -34,7 +34,7 @@
                 </div>
             {% endif %}
         </div>
-        <button type="submit">Log in</button>
+        <button class="form-button" type="submit">Log in</button>
     </form>
     <a href="{% url 'signup' %}">Have no account yet? Sign Up!</a>
     {% if error %}
