--- a/mainApp/templates/mainApp/signUp.html
+++ b/mainApp/templates/mainApp/signUp.html
@@ -25,7 +25,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit">Sign up</button>
+        <button class="form-button" type="submit">Sign up</button>
     </form>
     <a href="{% url 'login' %}">Already have an account? Log In!</a>
     {% if error %}
