--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -5,109 +5,8 @@
     <meta charset="UTF-8">
     <title>TastefulRecipes - Home </title>
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <style>
-        .cta {
-          border: none;
-          background: none;
-          cursor: pointer;
-            position: absolute;
-            bottom: 2px;
-            right: 2px;
-            margin: 7px;
-        }
-
-        .cta span {
-          padding-bottom: 7px;
-          letter-spacing: 4px;
-          font-size: 14px;
-          padding-right: 15px;
-          text-transform: uppercase;
-        }
-
-        .cta svg {
-          transform: translateX(-8px);
-          transition: all 0.3s ease;
-        }
-
-        .cta:hover svg {
-          transform: translateX(0);
-        }
-
-        .cta:active svg {
-          transform: scale(0.9);
-        }
-
-        .hover-underline-animation {
-          position: relative;
-          color: black;
-          padding-bottom: 20px;
-        }
-
-        .hover-underline-animation:after {
-          content: "";
-          position: absolute;
-          width: 100%;
-          transform: scaleX(0);
-          height: 2px;
-          bottom: 0;
-          left: 0;
-          background-color: #000000;
-          transform-origin: bottom right;
-          transition: transform 0.25s ease-out;
-        }
-
-        .cta:hover .hover-underline-animation:after {
-          transform: scaleX(1);
-          transform-origin: bottom left;
-        }
-        .recipe-card {
-            display: flex;
-            height: fit-content;
-            flex-direction: row;
-            position: relative;
-            padding: 20px;
-            margin-top: 20px;
-            border: 1px solid black;
-            break-inside: avoid;        /* Prevents recipes from breaking across columns */
-            margin-bottom: 20px;
-            border-radius: 30px;
-        }
-
-        .recipe-card img{
-            width: 40%;
-            height: auto;
-            z-index: 0;
-            border-radius: 10px;
-            object-fit: contain;
-            display: block;
-        }
-        @media (max-width: 600px) {
-            .description{
-                display: none;
-            }
-            .cta{
-                display: none;
-            }
-            .recipe-card{
-                cursor: pointer;
-            }
-        }
-        @media (max-width: 768px) {
-            .recipe-card {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-            .recipe-card img {
-                width: 100%;
-                height: auto;
-                display: block;
-            }
-            .recipe-card div {
-                width: 100%;
-            }
-
-        }
     </style>
 </head>
 <body>
@@ -154,7 +53,9 @@
     const recipeCards = document.querySelectorAll('.recipe-card');
     recipeCards.forEach(card => {
         card.addEventListener('click', () => {
-            window.location.href = card.getAttribute('data-url');
+            if(window.innerWidth < 600){
+                window.location.href = card.getAttribute('data-url');
+            }
         });
     });
 </script>
