--- a/mainApp/static/css/home.css
+++ b/mainApp/static/css/home.css
@@ -57,12 +57,12 @@
     height: fit-content;
     flex-direction: row;
     position: relative;
-    padding: 20px;
+    padding: 3vh;
     margin-top: 20px;
     border: 1px solid black;
     break-inside: avoid;        /* Prevents recipes from breaking across columns */
-    margin-bottom: 20px;
-    border-radius: 30px;
+    margin-bottom: 15px;
+    border-radius: 25px;
 }
 
 .recipe-card img{
@@ -89,6 +89,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        padding: 2vh;
     }
     .recipe-card img {
         width: 100%;
@@ -101,6 +102,8 @@
 
 }
 #header{
+    display: flex;
+    flex-direction: column;
     text-align: center;
     height: 10vh;
     padding: 10px;
@@ -113,5 +116,5 @@
     justify-content: center;
     align-items: center;
     z-index: 5;
-    font-size: 3vh;
+    font-size: 2.5vh;
 }
