--- a/mainApp/templates/mainApp/add_recipe.html
+++ b/mainApp/templates/mainApp/add_recipe.html
@@ -29,7 +29,7 @@
         <textarea id="instructions" name="instructions" required></textarea>
         <label for="image">Image (optional):</label>
         <input type="file" name="image" id="image" accept="image/*">
-        <button type="submit">Add Recipe</button>
+        <button class="form-button" type="submit">Add Recipe</button>
     </form>
     {% if error %}
         <p style="color: red;">{{ error }}</p>
